--- a/Freight/Views/Calculator/Index.cshtml
+++ b/Freight/Views/Calculator/Index.cshtml
@@ -490,8 +490,8 @@
                     }
 
                     if (count == 0) {
-                        $('<tr id="tr-id" colspan="8">')
-                            .append($('<td>').append("Can not found"))
+                        $('<tr id="tr-id">')
+                            .append($('<td colspan="8">').append("Can not found"))
                             .appendTo('table tbody');
                     }
                 }
