--- a/Freight/Views/Home/AssignRole.cshtml
+++ b/Freight/Views/Home/AssignRole.cshtml
@@ -113,10 +113,16 @@
                     </div>
                     <div class="col-md-6 row">
                         <label style="margin-right: 21px;">Status:</label>
-                        <input type="checkbox" id="pending" value="pending" onclick="myFunc(1)" /><p style="margin-left: 3px; margin-right: 15px;">Pending</p>
-                        <input type="checkbox" id="active" value="active" onclick="myFunc(3)" /><p style="margin-left: 3px; margin-right: 15px;">Active</p>
-                        <input type="checkbox" id="inactive" value="inactive" onclick="myFunc(4)" /><p style="margin-left: 3px; margin-right: 15px;">Inactive</p>
-                        <input type="checkbox" id="all" value="all" onclick="myFunc(5)" /><p style="margin-left: 3px; margin-right: 15px;">All</p>
+                        <div class="mgroup">
+                            <input type="radio" id="contactChoice1" name="contact" onclick="search('PENDING')" value="PENDING">
+                            <label for="contactChoice1">Pending</label>
+                            <input type="radio" id="contactChoice2" name="contact" onclick="search('ACTIVE')" value="ACTIVE">
+                            <label for="contactChoice2">Active</label>
+                            <input type="radio" id="contactChoice3" name="contact" onclick="search('INACTIVE')" value="INACTIVE">
+                            <label for="contactChoice3">Inactive</label>
+                            <input type="radio" id="contactChoice4" name="contact" checked="checked" onclick="search()" value="ALL">
+                            <label for="contactChoice4">All</label>
+                        </div>
                     </div>
                 </div>
                 <div class="row" style="margin-left:0px">
@@ -149,92 +155,7 @@
 <script src="~/Scripts/jquery-3.4.1.js"></script>
 <script>
 
-    
-    function myFunc(id) {
-        debugger
-        var s = "";
-        if (id == 1) {
-            s = "pending";
-            $("#approved").prop("checked", false);
-            $("#active").prop("checked", false);
-            $("#inactive").prop("checked", false);
-            $("#all").prop("checked", false);
-        }
-        if (id == 2) {
-            s = "approved";
-            $("#pending").prop("checked", false);
-            $("#active").prop("checked", false);
-            $("#inactive").prop("checked", false);
-            $("#all").prop("checked", false);
-        }
-        if (id == 3) {
-            s = "active";
-            $("#pending").prop("checked", false);
-            $("#approved").prop("checked", false);
-            $("#inactive").prop("checked", false);
-            $("#all").prop("checked", false);
-        }
-        if (id == 4) {
-            s = "inactive";
-            $("#pending").prop("checked", false);
-            $("#active").prop("checked", false);
-            $("#approved").prop("checked", false);
-            $("#all").prop("checked", false);
-        }
-        if (id == 5) {
-            s = "all";
-            $("#pending").prop("checked", false);
-            $("#active").prop("checked", false);
-            $("#approved").prop("checked", false);
-            $("#inactive").prop("checked", false);
-        }
-        var idcheck = "#" + s;
-        if (s !== "all" && $(idcheck).prop("checked") == true) {
-            var table = document.getElementById("tableSurchargeRate");
-            var tr = table.getElementsByTagName("tr");
-            for (var i = 0; i < tr.length; i++) {
-                td = tr[i].getElementsByTagName("td")[4];
-                if (td) {
-                    txtValue = td.textContent || td.innerText;
-                    if (txtValue.toUpperCase() === s.toUpperCase()) {
-                        tr[i].style.display = "";
-                    } else {
-                        tr[i].style.display = "none";
-                    }
-                }
-            }
-        }
-        else {
-            var table = document.getElementById("tableSurchargeRate");
-            var tr = table.getElementsByTagName("tr");
-            for (var i = 0; i < tr.length; i++) {
-                tr[i].style.display = "";
-            }
-        }
-    }
-    function search() {
-        // Declare variables
-        var input, filter, table, tr, td, i, txtValue;
-        input = document.getElementById("myInput");
-        filter = input.value.toUpperCase();
-        table = document.getElementById("tableSurchargeRate");
-        tr = table.getElementsByTagName("tr");
-
-        // Loop through all table rows, and hide those who don't match the search query
-        for (i = 0; i < tr.length; i++) {
-            td = tr[i].getElementsByTagName("td")[0];
-            if (td) {
-                txtValue = td.textContent || td.innerText;
-                if (txtValue.toUpperCase().indexOf(filter) > -1) {
-                    tr[i].style.display = "";
-                } else {
-                    tr[i].style.display = "none";
-                }
-            }
-        }
-    }
-
-    $(document).ready(function () {
+    //$(document).ready(function () {
         var userList;
 
         $.ajax({
@@ -264,7 +185,7 @@
                 $("#editSite").html(s);
             }
         });
-        
+
         $.ajax({
             type: "GET",
             url: "/Account/GetListGroup",
@@ -318,17 +239,19 @@
             })
         });
 
-        function search() {
+        function search(status) {
             input = document.getElementById("myInput");
+            var contentToRemove = document.querySelectorAll("#tr-id");
+            $(contentToRemove).remove();
             $.ajax({
                 type: "POST",
                 url: "/account/GetListUsers",
                 data: JSON.stringify({
-                    "name": input,
+                    "name": input.textContent,
                     "id": "",
                     "category": "",
                     "code": "",
-                    "status": "",
+                    "status": status == undefined ? "" : status,
                     "order_by": "",
                     "pageIndex": 1,
                     "pageSize": 2000
@@ -351,13 +274,13 @@
                             .appendTo('table tbody');
                     }
                     if (response.data.Items.length == 0) {
-                        $('<tr id="tr-id" colspan="8">')
-                            .append($('<td>').append("Can not found"))
+                        $('<tr id="tr-id">')
+                            .append($('<td colspan="6">').append("Can not found"))
                             .appendTo('table tbody');
                     }
                 }
             })
         };
-        search();
-    });
+        search('');
+    //});
 </script>
