--- a/Freight/Views/Home/AssignRole.cshtml
+++ b/Freight/Views/Home/AssignRole.cshtml
@@ -44,31 +44,15 @@
         <div class="menu-list">
 
             <ul id="menu-content" class="menu-content collapse out">
-                <a href="/UAT/Freight_Wireframe/Calculator/Index" style="text-decoration:none">
-                    <li data-toggle="collapse" data-target="#products" class="collapsed">
-                        <i class="fa fa-lg fa-dashboard fa-lg" style="padding-right:10px"></i>
-                        Calculator
-                    </li>
-
-                </a>
-                <a href="/UAT/Freight_Wireframe/UploadRate/Index" style="text-decoration:none">
-                    <li data-toggle="collapse" data-target="#new" id="uprate" class="collapsed">
-                        <i class="fa fa-lg fa-upload" style="padding-right:8px"></i>
-                        Upload rate
-                    </li>
-                </a>
-                <a href="/UAT/Freight_Wireframe/SurchargeRate/Index" style="text-decoration:none">
-                    <li data-toggle="collapse" data-target="#new" id="surrate" class="collapsed">
-                        <i class="fa fa-lg fa-caret-up" style="padding-right:8px"></i>
-                        Surcharge Rate
-                    </li>
-                </a>
-                <a href="/UAT/Freight_Wireframe/Home/AssignRole" style="text-decoration:none">
-                    <li data-toggle="collapse" data-target="#new" id="asrole" class="collapsed active">
-                        <i class="fa fa-lg fa-user" style="padding-right:8px"></i>
-                        User
-                    </li>
-                </a>
+                @foreach (var m in MM_Freight_Rate_API_Backend.Hepler.ListModules)
+                {
+                    <a href="@m.URL" style="text-decoration:none">
+                        <li data-toggle="collapse" class="collapsed" data-target="#products">
+                            <i class="fa fa-lg @m.ICON_IMAGE" style="padding-right:10px"></i>
+                            @m.MODULE_NAME
+                        </li>
+                    </a>
+                }
             </ul>
         </div>
     </div>
@@ -160,7 +144,7 @@
 
         $.ajax({
             type: "GET",
-            url: "/Account/GetUserStatus",
+            url: baseURL + "/Account/GetUserStatus",
             dataType: "json",
             contentType: "application/json;charset=utf-8",
             success: function (response) {
@@ -174,7 +158,7 @@
 
         $.ajax({
             type: "GET",
-            url: "/Account/GetListSites",
+            url: baseURL +"/Account/GetListSites",
             dataType: "json",
             contentType: "application/json;charset=utf-8",
             success: function (response) {
@@ -188,7 +172,7 @@
 
         $.ajax({
             type: "GET",
-            url: "/Account/GetListGroup",
+            url: baseURL +"/Account/GetListGroup",
             dataType: "json",
             contentType: "application/json;charset=utf-8",
             success: function (response) {
@@ -206,6 +190,7 @@
             }
             else {
                 $("#divMonth").attr("hidden", "true");
+                $("#saveButton").attr("hidden", "true");
             }
         }
 
@@ -223,7 +208,7 @@
         $("#saveButton").click(function () {
             $.ajax({
                 type: "POST",
-                url: "/account/UpdateUser",
+                url: baseURL +"/account/UpdateUser",
                 data: JSON.stringify({
                     "Name": $("#editName").val(),
                     "email": $("#editEmail").val(),
@@ -244,7 +229,7 @@
             $(contentToRemove).remove();
             $.ajax({
                 type: "POST",
-                url: "/account/GetListUsers",
+                url: baseURL +"/account/GetListUsers",
                 data: JSON.stringify({
                     "name": $("#myInput").val(),
                     "id": "",
