--- a/Freight/Views/Home/AssignRole.cshtml
+++ b/Freight/Views/Home/AssignRole.cshtml
@@ -274,7 +274,7 @@
                     }
                     if (response.data.Items.length == 0) {
                         $('<tr id="tr-id">')
-                            .append($('<td colspan="6">').append("Can not found"))
+                            .append($('<td colspan="6">').append("No records found!"))
                             .appendTo('table tbody');
                     }
                 }
