--- a/Freight/Views/Shared/_Layout.cshtml
+++ b/Freight/Views/Shared/_Layout.cshtml
@@ -4,6 +4,8 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mentor Media</title>
+    <base href="/RFID-WIREFRAME/">
+    <link data-n-head="ssr" rel="icon" type="image/x-icon" href="~/favicon1.ico" />
     <link href="~/Content/Site.css" rel="stylesheet" type="text/css" />
     <link href="~/Content/bootstrap.min.css" rel="stylesheet" type="text/css" />
     <link href="~/Style/sidebar.css" rel="stylesheet" />
@@ -22,15 +24,15 @@
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
     <script type="text/javascript">
-        function showMsg(msg,type=''){
-            if(type=='' || type=='warn') 
-                $('#alertMsg').attr('class','alert alert-warning');
-            else if(type=='error')
-                $('#alertMsg').attr('class','alert alert-danger');
-            else if(type=='success')
-                $('#alertMsg').attr('class','alert alert-success');
-            else $('#alertMsg').attr('class','alert alert-info');
-            $('#alertMsg').html('<b>'+msg+'</b>');
+        function showMsg(msg, type = '') {
+            if (type == '' || type == 'warn')
+                $('#alertMsg').attr('class', 'alert alert-warning');
+            else if (type == 'error')
+                $('#alertMsg').attr('class', 'alert alert-danger');
+            else if (type == 'success')
+                $('#alertMsg').attr('class', 'alert alert-success');
+            else $('#alertMsg').attr('class', 'alert alert-info');
+            $('#alertMsg').html('<b>' + msg + '</b>');
             $("#alertMsg").fadeTo(7000, 500).slideUp(500, function () {
                 $("#salertMsg").slideUp(500);
             });
