Fix submit jira

--- a/Freight/Views/Shared/_Layout.cshtml
+++ b/Freight/Views/Shared/_Layout.cshtml
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mentor Media</title>
-    <base href="/RFID-WIREFRAME/">
+    @*<base href="/RFID-WIREFRAME/">*@
     <link data-n-head="ssr" rel="icon" type="image/x-icon" href="~/favicon1.ico" />
     <link href="~/Content/Site.css" rel="stylesheet" type="text/css" />
     <link href="~/Content/bootstrap.min.css" rel="stylesheet" type="text/css" />
@@ -55,7 +55,8 @@
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
     @RenderSection("scripts", required: false)
-
+    <script type="text/javascript" src="https://mentormediasd.atlassian.net/s/d41d8cd98f00b204e9800998ecf8427e-T/-lgwqy6/b/3/9edb822e6c4db3635f27806476c088cb/_/download/batch/com.atlassian.jira.collector.plugin.jira-issue-collector-plugin:issuecollector/com.atlassian.jira.collector.plugin.jira-issue-collector-plugin:issuecollector.js?locale=en-US&collectorId=2f127817"></script>
+    <script type="text/javascript" src="?collectorId=2f127817"></script>
     <div class="alert" id="alertMsg"></div>
 </body>
 </html>
