--- a/Freight/Content/Site.css
+++ b/Freight/Content/Site.css
@@ -10,7 +10,7 @@
     padding-right: 15px;
     font-family: Roboto,sans-serif;
 }
-
+#atlwdg-trigger {z-index: 999}
 /* Override the default bootstrap behavior where horizontal description lists 
    will truncate terms that are too long to fit in the left column 
 */
