--- a/Freight/Style/login.css
+++ b/Freight/Style/login.css
@@ -18,7 +18,7 @@ body {
     font-size: 1.5rem;
     height:56px;
 }
-
+a.atlwdg-trigger {width: auto}
 a.submit {
     color: white;
     height: 36px;
