--- a/Freight/Views/SurchargeRate/Index.cshtml
+++ b/Freight/Views/SurchargeRate/Index.cshtml
@@ -13,176 +13,103 @@
         <div class="menu-list">
 
             <ul id="menu-content" class="menu-content collapse out">
-                @foreach (var m in MM_Freight_Rate_API_Backend.Hepler.ListModules)
-                {
-                    <a href="@m.URL" style="text-decoration:none">
-                        <li data-toggle="collapse" class="collapsed" data-target="#products">
-                            <i class="fa fa-lg @m.ICON_IMAGE" style="padding-right:10px"></i>
-                            @m.MODULE_NAME
-                        </li>
-                    </a>
-                }
-                @*<a href="/UAT/Freight_Wireframe/Calculator/Index" style="text-decoration:none">
-        <li data-toggle="collapse" data-target="#products" class="collapsed">
-            <i class="fa fa-lg fa-dashboard fa-lg" style="padding-right:10px"></i>
-            Calculator
-        </li>
-
-        </a>
-        <a href="/UAT/Freight_Wireframe/UploadRate/Index" style="text-decoration:none">
-            <li data-toggle="collapse" data-target="#new" class="collapsed">
-                <i class="fa fa-lg fa-upload" style="padding-right:8px"></i>
-                Upload rate
-            </li>
-        </a>
-        <a href="/UAT/Freight_Wireframe/SurchargeRate/Index" style="text-decoration:none">
-            <li data-toggle="collapse" data-target="#new" class="collapsed active">
-                <i class="fa fa-lg fa-caret-up" style="padding-right:8px"></i>
-                Surcharge Rate
-            </li>
-        </a>
-        <a href="/UAT/Freight_Wireframe/Home/AssignRole" style="text-decoration:none">
-        <li data-toggle="collapse" data-target="#new" id="asrole" class="collapsed">
-            <i class="fa fa-lg fa-user" style="padding-right:8px"></i>
-            User
-        </li>
-        </a>*@
+                @*@foreach (var m in MM_Freight_Rate_API_Backend.Hepler.ListModules)
+                    {
+                        <a href="@m.URL" style="text-decoration:none">
+                            <li data-toggle="collapse" class="collapsed" data-target="#products">
+                                <i class="fa fa-lg @m.ICON_IMAGE" style="padding-right:10px"></i>
+                                @m.MODULE_NAME
+                            </li>
+                        </a>
+                    }*@
             </ul>
         </div>
     </div>
 }
-<body>
-    <div style="min-height:80vH">
-        <section>
-            <div style=" font-size:1.5rem">
-                <h3>Surcharge Rate</h3>
-                <div class="row">
-                    <div class="col-xs-6 col-md-6" style="margin-top: 15px; ">
-                        <label class="col-md-12 row">Year</label>
-                        <select class="form-select form-control-lg mb-5 col-md-9" id="carrierSelect">
-                            <option value="2019">2019</option>
-                            <option value="2020">2020</option>
-                            <option selected value="2021">2021</option>
-                            <option value="2022">2022</option>
-                            <option value="2023">2023</option>
-                            <option value="2024">2024</option>
-                            <option value="2025">2025</option>
-                        </select>
-                    </div>
-                </div>
-                <div class="row" hidden id="divMonth">
-                    <div class="col-xs-4 col-md-4" style="margin-top: 15px; ">
-                        <label class="col-md-12 row">Month</label>
-                        <input class="form-select form-control-lg mb-5 col-md-12" type="text" readonly id="month" placeholder="Month" value=""/>
-                    </div>
-                    <div class="col-xs-4 col-md-4" style="margin-top: 15px; ">
-                        <label class="col-md-12 row">DHL (%)</label>
-                        <input id="tdSelectdhl" value="" hidden />
-                        <input class="form-select form-control-lg mb-5 col-md-12" type="text" id="dhl" value="" />
-                    </div>
-                    <div class="col-xs-4 col-md-4" style="margin-top: 15px; ">
-                        <label class="col-md-12 row">FedEx (%)</label>
-                        <input id="tdSelectfedex" value="" hidden />
-                        <input class="form-select form-control-lg mb-5 col-md-12" type="text" id="fedex" value="" />
-                    </div>
-                </div>
-                <div class="row ml-0" style="margin-top:20px">
-                    <button type="button" class="btn btn-primary btn-lg" id="saveButton" hidden>Save Change</button>
-                </div>
-                <div class="row" style="margin-left:0px">
-                    <table class="table table-striped" id="tableSurchargeRate">
-                        <thead>
-                            <tr>
-                                <th>Month</th>
-                                <th>DHL (%)</th>
-                                <th>FedEx (%)</th>
-                                <th class="record">Edit</th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            <tr>
-                                <td class="tdMonth">January</td>
-                                <td class="tdSurchargeRate" id="DHL_1">8</td>
-                                <td class="tdSurchargeRate" id="FedEx_1">6</td>
-                                <td><input value="Edit" class="record" type="button" onclick="Edit(1)" /></td>
-                            </tr>
-                            <tr>
-                                <td class="tdMonth">February</td>
-                                <td class="tdSurchargeRate" id="DHL_2">9</td>
-                                <td class="tdSurchargeRate" id="FedEx_2">13</td>
-                                <td><input value="Edit" class="record" type="button" onclick="Edit(2)" /></td>
-                            </tr>
-                            <tr>
-                                <td class="tdMonth">March</td>
-                                <td class="tdSurchargeRate" id="DHL_3">10</td>
-                                <td class="tdSurchargeRate" id="FedEx_3">11</td>
-                                <td><input value="Edit" class="record" type="button" onclick="Edit(3)" /></td>
-                            </tr>
-                            <tr>
-                                <td class="tdMonth">April</td>
-                                <td class="tdSurchargeRate" id="DHL_4">7</td>
-                                <td class="tdSurchargeRate" id="FedEx_4">8</td>
-                                <td><input value="Edit" class="record" type="button" onclick="Edit(4)" /></td>
-                            </tr>
-                            <tr>
-                                <td class="tdMonth">May</td>
-                                <td class="tdSurchargeRate" id="DHL_5">9</td>
-                                <td class="tdSurchargeRate" id="FedEx_5">10</td>
-                                <td><input value="Edit" class="record" type="button" onclick="Edit(5)" /></td>
-                            </tr>
-                            <tr>
-                                <td class="tdMonth">June</td>
-                                <td class="tdSurchargeRate" id="DHL_6">8</td>
-                                <td class="tdSurchargeRate" id="FedEx_6">5</td>
-                                <td><input value="Edit" class="record" type="button" onclick="Edit(6)" /></td>
-                            </tr>
-                            <tr>
-                                <td class="tdMonth">July</td>
-                                <td class="tdSurchargeRate" id="DHL_7">6</td>
-                                <td class="tdSurchargeRate" id="FedEx_7">12</td>
-                                <td><input value="Edit" class="record" type="button" onclick="Edit(7)" /></td>
-                            </tr>
-                            <tr>
-                                <td class="tdMonth">August</td>
-                                <td class="tdSurchargeRate" id="DHL_8">10</td>
-                                <td class="tdSurchargeRate" id="FedEx_8">8</td>
-                                <td><input value="Edit" class="record" type="button" onclick="Edit(8)" /></td>
-                            </tr>
-                            <tr>
-                                <td class="tdMonth">September</td>
-                                <td class="tdSurchargeRate" id="DHL_9">5</td>
-                                <td class="tdSurchargeRate" id="FedEx_9">7</td>
-                                <td><input value="Edit" class="record" type="button" onclick="Edit(9)" /></td>
-                            </tr>
-                            <tr>
-                                <td class="tdMonth">October</td>
-                                <td class="tdSurchargeRate" id="DHL_10">9</td>
-                                <td class="tdSurchargeRate" id="FedEx_10">6</td>
-                                <td><input value="Edit" class="record" type="button" onclick="Edit(10)" /></td>
-                            </tr>
-                            <tr>
-                                <td class="tdMonth">November</td>
-                                <td class="tdSurchargeRate" id="DHL_11">6</td>
-                                <td class="tdSurchargeRate" id="FedEx_11">8</td>
-                                <td><input value="Edit" class="record" type="button" onclick="Edit(11)" /></td>
-                            </tr>
-                            <tr>
-                                <td class="tdMonth">December</td>
-                                <td class="tdSurchargeRate" id="DHL_12">10</td>
-                                <td class="tdSurchargeRate" id="FedEx_12">12</td>
-                                <td><input value="Edit" class="record" type="button" onclick="Edit(12)" /></td>
-                            </tr>
-                        </tbody>
-                    </table>
+<div style="min-height:80vH">
+    <section>
+        <div style=" font-size:1.5rem">
+            <h3>Surcharge Rate</h3>
+            <div class="row">
+                <div class="col-xs-6 col-md-6" style="margin-top: 15px; ">
+                    <label class="col-md-12 row">Year</label>
+                    <select class="form-select form-control-lg mb-5 col-md-9" id="carrierSelect">
+                        <option value="2019">2019</option>
+                        <option value="2020">2020</option>
+                        <option selected value="2021">2021</option>
+                        <option value="2022">2022</option>
+                        <option value="2023">2023</option>
+                        <option value="2024">2024</option>
+                        <option value="2025">2025</option>
+                    </select>
                 </div>
             </div>
-        </section>
-        <footer style=" position:absolute;top:100%; font-size:15px;">
-            <label style="font-weight: normal">Copyright Mentor Media, 2021</label>
-        </footer>
-    </div>
-</body>
+            <div class="row" hidden id="divMonth">
+                <div class="col-xs-4 col-md-4" style="margin-top: 15px; ">
+                    <label class="col-md-12 row">Month</label>
+                    <input class="form-select form-control-lg mb-5 col-md-12" type="text" readonly id="month" placeholder="Month" value="" />
+                </div>
+                <div class="col-xs-4 col-md-4" style="margin-top: 15px; ">
+                    <label class="col-md-12 row">DHL (%)</label>
+                    <input id="tdSelectdhl" value="" hidden />
+                    <input class="form-select form-control-lg mb-5 col-md-12" type="text" id="dhl" value="" />
+                </div>
+                <div class="col-xs-4 col-md-4" style="margin-top: 15px; ">
+                    <label class="col-md-12 row">FedEx (%)</label>
+                    <input id="tdSelectfedex" value="" hidden />
+                    <input class="form-select form-control-lg mb-5 col-md-12" type="text" id="fedex" value="" />
+                </div>
+            </div>
+            <div class="row ml-0" style="margin-top:20px">
+                <button type="button" class="btn btn-primary btn-lg" id="saveButton" hidden>Save Change</button>
+            </div>
+            <div class="row" style="margin-left:0px">
+                <table class="table table-striped" id="tableSurchargeRate">
+                    <thead>
+                        <tr>
+                            <th>Month</th>
+                            <th>DHL (%)</th>
+                            <th>FedEx (%)</th>
+                            <th class="record">Edit</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                    </tbody>
+                </table>
+            </div>
+        </div>
+    </section>
+    <footer style=" position:absolute;top:100%; font-size:15px;">
+        <label style="font-weight: normal">Copyright Mentor Media, 2021</label>
+    </footer>
+</div>
 <script>
+    $(document).ready(function () {
+        $.ajax({
+            type: "GET",
+            url: "/SurchargeRate/GetSurcharge?year=" + new Date().getFullYear(),
+            dataType: "json",
+            contentType: "application/json;charset=utf-8",
+            success: function (response) {
+                for (var i = 0; i < response.data.length; i++) {
+                    var item = response.data[i];
+                    var btnEdit = $('<input value="Edit" class="edit-record" type="button" editId="' + i + '"  />');
+                    $('<tr id="tr-id">')
+                        .append($('<td>').append(item.MONTH_NAME))
+                        .append($('<td>').append(item.DHL))
+                        .append($('<td>').append(item.FedEx))
+                        .append($('<td>').append(btnEdit))
+                        .appendTo('table tbody');
+                }
+
+                if (response.data.length == 0) {
+                    $('<tr id="tr-id">')
+                        .append($('<td colspan="8">').append("No records found!"))
+                        .appendTo('table tbody');
+                }
+            }
+        });
+    });
     function Edit(month) {
         let monthEng;
         if (month === 1) {
